Start the individual slides for each topic

--- a/index.html
+++ b/index.html
@@ -27,11 +27,64 @@
         <section>
           <h1>Git Tips & Tricks</h1>
         </section>
+
         <section>
           <h2>Everyday Git</h2>
         </section>
         <section>
-          <h2>'Git'ting into Trouble</h2>
+          git status
+        </section>
+        <section>
+          Synchronizing with the remote repo
+        </section>
+        <section>
+          git diff
+        </section>
+        <section>
+          git show
+        </section>
+        <section>
+          git stash
+        </section>
+        <section>
+          git merge --no-commit
+        </section>
+        <section>
+          git &lt;some_command&gt; -p
+        </section>
+        <section>
+          git push -u
+        </section>
+        <section>
+          git branch &lt;some_name&gt;
+        </section>
+
+        <section>
+          <h2>'git'ting into Trouble</h2>
+        </section>
+        <section>
+          Did that change make it in to this branch...?
+        </section>
+        <section>
+          Fixing the last commit
+        </section>
+        <section>
+          How do I get that back...?
+        </section>
+        <section>
+          git reset --hard
+        </section>
+        <section>
+          git rebase
+        </section>
+        <section>
+          Splicing branches
+        </section>
+        <section>
+          Where did it all go wrong...?
+        </section>
+        <section>
+          No one has the commit?!
         </section>
       </div>
     </div>
