Add notes to the 'git status' slide

--- a/index.html
+++ b/index.html
@@ -31,9 +31,25 @@
         <section>
           <h2>Everyday Git</h2>
         </section>
+
         <section>
           git status
+
+          <aside class="notes">
+            Of all of the things in this talk, this is the one that I
+            feel confident everyone here who works with git already
+            knows.  It is extremely basic.  But it is important,
+            perhaps because of that very basicness.  I consider it so
+            useful and important, I use it probably close to every
+            other git command.  It tells you what branch you are on,
+            and if it is in sync with its upstream.  It shows you what
+            files are in the index, what files have changes, and what
+            files aren't even being tracked at all yet.  It will even
+            show you if you have some other git command partially
+            completed, such as a merge or a rebase.
+          </aside>
         </section>
+
         <section>
           Synchronizing with the remote repo
         </section>
