Add the individual stash commands to the 'git stash' slide

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@ Fast-forward
         </section>
         <section>
           git stash
+          <p class="fragment">git stash [save]</p>
+          <p class="fragment">git stash list</p>
+          <p class="fragment">git stash apply</p>
+          <p class="fragment">git stash pop</p>
+          <p class="fragment">git stash drop</p>
+          <p class="fragment">... and more</p>
         </section>
         <section>
           git merge --no-commit
