Add individual commands that take '-p'

--- a/index.html
+++ b/index.html
@@ -104,7 +104,27 @@ Fast-forward
           git merge --no-commit
         </section>
         <section>
-          git &lt;some_command&gt; -p
+          <section>
+            Everything is better with patch!
+          </section>
+          <section>
+            git add -p
+          </section>
+          <section>
+            git log -p
+          </section>
+          <section>
+            git stash -p
+          </section>
+          <section>
+            git stash list -p
+          </section>
+          <section>
+            git stash show -p
+          </section>
+          <section>
+            git reset -p
+          </section>
         </section>
         <section>
           git push -u
