Add reflog and reset --hard to the "how to get back" slide

--- a/index.html
+++ b/index.html
@@ -143,10 +143,15 @@ Fast-forward
           Fixing the last commit
         </section>
         <section>
+          <section>
           How do I get that back...?
-        </section>
-        <section>
-          git reset --hard
+          </section>
+          <section>
+            git reflog
+          </section>
+          <section>
+            git reset --hard
+          </section>
         </section>
         <section>
           git rebase
