Rephrase the "no one has the commit" slide

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ pick 0d47ffb Commit message 3
           Where did it all go wrong...?
         </section>
         <section>
-          No one has the commit?!
+          What do you mean, no one has the commit?!
         </section>
       </div>
     </div>
